--- a/SyllabusFall16.Rmd
+++ b/SyllabusFall16.Rmd
@@ -64,6 +64,17 @@ This class will be taught as a collaborative seminar with limited traditional le
 there will be a considerable amount of writing and analysis, presentations by teams of student researchers
 and several referee reports. Nearly all work product will be made public to the class though your grade will not.
 
++ Various Team Assignments in total: 25%
++ Final Draft of Term Paper: 20%
++ Draft Term Paper: 15%
++ Presentation of Paper Topic: 15%
++ Annotated Bibliography: 3%
++ Abstract: 2%
++ Referee Report(s) of Draft Paper(s): 15%
++ Referee Report(s) of Final Paper(s): 5%
+
+Assignment dates listed below generally mean turned in online by 11:59pm on that date unless stated otherwise.  Term papers, referee reports and bibliographies will be posted on piazza as a pdf or a link to a google doc with PSU log in and granted comment privilages.  Malfunctioning links or corrupted files will be interpreted as a missed deadline and recieve half the normal credit. If a deadline is missed by more than 24 hrs, zero credit will be given.  While this seems harsh, missing a deadline means that other students have less time to complete their work.
+
 ## Team Assignments
 
 Teams will be assigned by the instructor after the first week of class. They will be composed of at least one
@@ -89,31 +100,31 @@ Grad students will also be formed into teams for assignments that are specific t
 
 ## Individual/Group Term Paper
 
-The largest assignment will be a term paper and will account for X% of your grade. The term paper may be
-either a literature review, in which case it must be completed by an individual or an empirical/theoretical
+The largest assignment will be a term paper. The term paper may be
+either a literature review, in which case it must be completed by an individual, or an empirical/theoretical
 paper which may have up to three co-authors. Graduate students
 must complete an empirical/theoretical paper. Term paper preparation and evaluation will be in stages.
 
 1. Authors and co-authors must publish an abstract, including a few key references, in the “Draft Abstracts”
-discussion topic and schedule a 30 minute review meeting with the instructor by October 24th. Scope and depth changes will be agreed to in the meeting.
+discussion topic and schedule a 30 minute review meeting with the instructor during the week of _October 24th_ after the draft abstracts are published. These meetings will be scheduled in class on October 17th. Scope and depth changes will be agreed to in the meeting.
 
-2. A revised abstract must be submitted by October 28th and will be published in the “Final Abstracts”
+2. A revised abstract must be submitted by _October 28th_ and will be published in the “Final Abstracts”
 discussion topic. Abstracts will be discussed in class and online. A minimum of two reviewers will be
 assigned to each paper. Ideally no reviewer will be assigned more than one paper.
 
 3. Authors and co-authors will construct an annotated bibliography. A reasonably complete annotated bibliography will be
-available for the class to review by November 4th and should be provided in “Final Abstracts” discussion topic.  Here are some links on how to create an annotated bibliography, http://guides.library.cornell.edu/annotatedbibliography and               https://www.bethel.edu/library/research/apa-annobib-sixth.pdf 
+available for the class to review by _November 4th_ and should be provided in “Final Abstracts” discussion topic.  Here are some links on how to create an annotated bibliography, http://guides.library.cornell.edu/annotatedbibliography and               https://www.bethel.edu/library/research/apa-annobib-sixth.pdf 
 
 
 4. Authors and co-authors that are pursuing an empirical paper must schedule a 20-minute presentation
-to the class on data collection, design and analysis approach prior to completion of the draft paper.
+to the class on data collection, design and analysis approach prior to completion of the draft paper.  These presentation will be scheduled to take place from _Nov 7th through the November 16th_ unless the author team wants to schedule something earlier.
 Additional problem solving presentations are encouraged. Students conducting a literature review should schedule a similar session for a key papers in their literature review. 
 
-5. A draft of the paper must be published in the “Draft Papers” discussion topic by November 18th. The
-referees will deliver a referee report on your draft by November 23rd as a comment to your original post.
+5. A draft of the paper must be published in the “Draft Papers” discussion topic by _November 18th_. If you are writing an empirical paper, the posting should include a link to your data and the code used to analize the data. The
+referees will deliver a referee report on your draft by _November 23rd_ as a comment to your original post.
 The instructor will make additional comments after the reports are received.
 
-6. The final paper must be published to the “Final Papers” discussion topic by December 2nd at 8pm. Term papers
+6. The final paper must be published to the “Final Papers” discussion topic by _December 2nd at 8pm_. Term papers
 must be less than 20 pages.
 
 ## Referee Reports
@@ -122,13 +133,13 @@ A referee report is a critical examination of an academic paper.  There is a spl
 
 + A referee report on a student’s or group’s draft paper. You will be assigned a paper to review. The
 report must be less than five pages, will be evaluated on a 0 to 5 scale and will constitute 10% of your
-grade. This is due by November 23rd and must be posted as a comment on the draft paper in the “Draft
+grade. This is due by _November 23rd_ and must be posted as a comment on the draft paper in the “Draft
 Papers” topic.
 
 + A referee report on a student’s or group’s final paper. This will be a second review of the paper you
 previously reviewed. The report must be less than five pages, will be evaluated on a 0 to 5 scale and
 will constitute 5% of your grade. This referee report will be delivered by,
-December 8th and published as a comment to the paper in the “Final Papers” topic.
+_December 8th_ and published as a comment to the paper in the “Final Papers” topic.
 
 The report will be evaluated on a 0 to 5 scale with the following rubric.
 
@@ -178,6 +189,8 @@ Note that some of these modules will be shared with the Public Utility Economics
     + Financial Markets
         + Energy Primer, Ch 5.
         + Dahl, Ch 18 - 19.
+        + Knittel, Christopher R. and Robert S. Pindyck. 2016. "The Simple Economics of Commodity Price Speculation." American Economic Journal: Macroeconomics, 8(2): 85-110. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/mac.20140033
+        + Deng, Shi-Jie, and Shmuel S. Oren. "Electricity derivatives and risk management." Energy 31.6 (2006): 940-953. http://stats.lib.pdx.edu/proxy.php?url=http://www.sciencedirect.com/science/article/pii/S0360544205000496
     + Intro to Externalities and Public Goods
         + Dahl, Ch 11 - 12.
         + Metcalf, Gilbert E.. 2009. "Market-Based Policy Options to Control U.S. Greenhouse Gas Emissions." Journal of Economic Perspectives, 23(2): 5-27. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/jep.23.2.5
@@ -187,10 +200,12 @@ Note that some of these modules will be shared with the Public Utility Economics
     + Price Controls and Subsidies (Not Carbon Taxes and Implicit Subsidies)
         + Dahl, Ch 4   
     + Market Monitoring
-        +  Energy Primer, Ch 6.
+        + Energy Primer, Ch 6.
+        + Helman, Udi. "Market power monitoring and mitigation in the US wholesale power markets." Energy 31.6 (2006): 877-904. http://stats.lib.pdx.edu/proxy.php?url=http://dx.doi.org/10.1016/j.energy.2005.05.011
     + Hotelling's Rule and Dynamic Extraction
         + Dahl, Ch 14
-    + Unit Commitment
+        + Gaudet, Gérard. "Natural resource economics under the rule of Hotelling." Canadian Journal of Economics/Revue canadienne d'économique 40.4 (2007): 1033-1059. http://onlinelibrary.wiley.com/doi/10.1111/j.1365-2966.2007.00441.x/full
+    + Supply and Cost Curves
         + Dahl Ch 15
     + Energy Demand
         + Dahl Ch 16
