--- a/Energy Models/EnergyModels.Rmd
+++ b/Energy Models/EnergyModels.Rmd
@@ -15,8 +15,6 @@ knitr::opts_chunk$set(echo = FALSE)
   + Scenario Planning
   + I/O Models
   + Energy Balance Models
-  + End Use
-  + Process Modeling
   + Game Theory
   + Experimental/Behavioral
 
@@ -42,20 +40,23 @@ qplot(Year, ProductionKShortTon, data = CoalProduction) + geom_smooth(method= lm
 
 # Trend Comments
 + Regression with time as RHS variable. $Y = time + \epsilon$
++ Other variables are often added, for example, weather variables.  You can see this in some integrated resource planning models.
 + EC469 shows you how to do this.
 + Not everything is a line.  You sometimes have to transform the data, logs and such are common.
 + Only uses the past.  
     + I was 90 lbs at 15, 110 at 17, 130 at 18 and 220 at 26.
     + Today?
 + People don't react to prices and there is no change in technology.
-+ That said, it works for alot of things and work when you have little time.
++ That said, it works for a lot of things and work when you have little time.
 + Plenty of energy modeling looks like this.
-    + If you don't have the time, throw in a trend line.
+    + "If you don't have the time, throw in a trend line."
 
 # Time Series
 + Similar to trend only
     + May have $Y  = ARMA(p,q)$
     + or include a trend $Y = time + ARMA(p,q)$
+    + the AR part is past values of LHS
+    + the MA part is past values of error term.
 + EC 472 shows you how to do this.
 + Most energy data has a trend to it, which must be included in the model.
 + Best thought of as a refinement to the trend regressions with better treatment of residuals.
@@ -68,14 +69,16 @@ qplot(Year, ProductionKShortTon, data = CoalProduction) + geom_smooth(method= lm
 
 + Don't laugh, this works.
 + Old hands make very good guesses based on experience.
-+ GDP even has components that are based on analysists best judgement.
++ GDP even has components that are based on analyst's best judgement.
++ This can be combined with incentivised polls or parimutuel betting to make it work better.
+  + The Iowa Electronic Markets are a common example, though there are others. https://tippie.biz.uiowa.edu/iem/markets/ 
 
 # Survey Based
 
 + Book gives some examples.
 + Ask a bunch of experts about their best judgement and summarize
 + Often expanded as a Delphi Survey
-+ For comically bad forecast see "Results of the Delphi IX Survey of Oil Forecasts" California Energy Comission, 1997.
++ For comically bad forecast see "Results of the Delphi IX Survey of Oil Forecasts" California Energy Commission, 1997.
 
 # Delphi Surveys
 
@@ -99,12 +102,13 @@ qplot(Year, ProductionKShortTon, data = CoalProduction) + geom_smooth(method= lm
     + Decide how you would act now given that you know that that future will exist.
     + ?
     + Profit
++ Example by National Renewable Energy Research Labratory (NREL) did one for Hawaii. http://www.nrel.gov/docs/fy12osti/52442.pdf 
 
 # Frequent use and abuse of scenarios analysis
 
 + Rigging scenarios so that only one is taken seriously. (abuse)
-+ Chosing actions that will "work" in all scenarios. (abuse)
-+ Actual plans for if a scenario becomes more likely, "Plans are worthless, but planning is everything." -Ike
++ Choosing actions that will "work" in all scenarios. (abuse)
++ Actual plans if a scenario becomes more likely, "Plans are worthless, but planning is everything." -Ike
 + Creation of real options
     + Defer action until more information is available.  Don't bring an umbrella everywhere, but have on near by if it starts to rain.
     + Create systems you can use when the situation is clearer.  Think peaking power plants that only run a few days a year.
@@ -116,9 +120,9 @@ qplot(Year, ProductionKShortTon, data = CoalProduction) + geom_smooth(method= lm
     + No reaction to price changes
     + No reaction to input price changes
     + Constant returns to scale.
-+ Often seen as part of a computable general equilibrium model to shorten run-times. REMI and IMPLAN use it in regional economic models.
++ Often seen as part of a computable general equilibrium model to shorten run-times. REMI (http://www.remi.com/) and IMPLAN (http://implan.com/) use it in regional economic models.
 
-+ Will not as you to do one unless you want to.
++ Will not ask you to do one unless you want to.
 + Book has an overly long explanation.
 
 # Walk Through I/O model
@@ -126,33 +130,50 @@ $x_1 = \alpha_{1,1} x_1 + \alpha_2 x_{1,2} + d_1$
 
 + $x_1$ is how much of good one that gets made.
 + $d_1$ is how much final consumers want of good 1.
-+ $\alpha_{1,1}$ the ammount of good 1 needed to produce good 1.
-+ $\alpha_{1,2}$ the ammount of good 1 needed to produce good 1.
++ $\alpha_{1,1}$ the amount of good 1 needed to produce good 1.
++ $\alpha_{1,2}$ the amount of good 1 needed to produce good 1.
 + Each good has an equation
-+ $\alpha$ can be zero but there are restrictions on how many and where. The matrix needs to be invertable.
++ $\alpha$s can be zero but there are restrictions on how many and where. The matrix needs to be invertable.
 
 Matrix Form
 $x=Ax +d$ is solved as $x=(I-A)^{-1}d$
 
+# Warnings about the next models in book
 
-The next series of models, energy balance, end use, process, all build on each other from high level to low level.
++ They are an unholy mix of estimates, in engineering sense, and estimates, in the statistical sense.
++ They can be huge.  The national energy modeling system has many modules and sub-modules.
+    + http://www.eia.gov/forecasts/aeo/nems/overview/electricity.html
++ The approaches are frequently combined.
 
-# Energy Balance Models
+# "Estimate" to an Engineer and Statistician
 
-# End Use Modeling
++ To an engineer, an estimate means taking some known or assumed values for parameters then performing some calculations to find a parameter of interest.
+    + Example, building energy simulations like EnergyPlus.  Put in windows, screens, walls, assume some values human behavior, and weather and out pops annual energy use.
+    + Can work with _very_ complex models, but is usually shaky with uncertainty.
++ To a statistician, an estimate means taking data, repeated observations of a physical data generating process and calculating a summary statistic.
+    + Example, estimate implied thermostat settings from gas use and R values of walls from a survey.
+    + Treats uncertainty well but often lack the complexity of the engineering style models.
+    
+# Combining Engineering and Statistician Style Estimates
 
-# Process Modeling
++ A typical Example is estimates of  Unit Energy Consumption (UECs)
+    + The EIA Residential Energy Consumption Survey (RECS) http://www.eia.gov/consumption/residential/reports/2009/methodology-end-use.cfm
+    + California Residential Appliance Saturation Study (RASS) http://www.energy.ca.gov/appliances/rass/
+    
++ Check the details for RASS and see how they combine engineering estimates with regression analysis.     
+    + http://www.energy.ca.gov/2010publications/CEC-200-2010-004/CEC-200-2010-004-V1.PDF.
+    + Often called a statistically adjusted engineering model.
 
 # Game Theory
 
-+ Not a full all economy model but a tool used to deal with decisons where:
++ Not a full, all economy, model but a tool used to deal with decisions where:
     + There is not a monopoly or monopsony.
     + Not perfect competition.
 + Also used for:
     + Dynamic interactions of firms, think how gasoline prices go up fast but down slow.
     + Auction and bidding, technically mechanism design which is game theory backwards, to get people to tell the truth or do the right thing.
     + Basis for a lot of modern "regulation" which focuses on encouraging competition to reach goals.
-+ Probably did some in 201 or 311.
++ Probably did some in EC 201 or EC 311, but we have a full class EC 321 and math has several.
     
 
 # Experimental/Behavioral
@@ -160,7 +181,7 @@ The next series of models, energy balance, end use, process, all build on each o
 + The behavioral part is admitting that people and firms do not act rationally.
 + Old school experiments, A/B testing and more, run on people
 + Field experiments are common in economics now
-    + Esther Duflo recieved the Bates Clark Award 2010
+    + Esther Duflo received the Bates Clark Award 2010
     + Bluffstone in Econ is running two now in Ethiopia and Nepal.
     
 + Typical Issues
